--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "devDependencies": {
     "mocha": "^3.5.0",
+    "nock": "^9.0.14",
     "should": "^13.0.0",
     "sinon": "^3.2.1"
   }
