--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "request": "^2.81.0"
   },
   "devDependencies": {
+    "istanbul": "^0.4.5",
     "mocha": "^3.5.0",
     "nock": "^9.0.14",
     "should": "^13.0.0",
