--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "request": "^2.81.0"
   },
   "devDependencies": {
+    "coveralls": "^2.13.1",
     "istanbul": "^0.4.5",
     "mocha": "^3.5.0",
+    "mocha-lcov-reporter": "^1.3.0",
     "nock": "^9.0.14",
     "should": "^13.0.0",
     "sinon": "^3.2.1"
