--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "The JavaScript SDK for CEP Aberto open database API",
   "main": "index.js",
   "scripts": {
-    "test": "mocha"
+    "test": "mocha",
+    "cover": "istanbul cover _mocha",
+    "coveralls": "npm run cover -- --report lcovonly && cat ./coverage/lcov.info | coveralls"
   },
   "keywords": [
     "cep",
@@ -20,7 +22,10 @@
     "request": "^2.81.0"
   },
   "devDependencies": {
+    "coveralls": "^2.13.1",
+    "istanbul": "^0.4.5",
     "mocha": "^3.5.0",
+    "mocha-lcov-reporter": "^1.3.0",
     "nock": "^9.0.14",
     "should": "^13.0.0",
     "sinon": "^3.2.1"
